--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,7 @@ sphinx:
   configuration: source/conf.py
   # builder: "dirhtml"
   # Fail on all warnings to avoid broken references
-   fail_on_warning: true
+  #fail_on_warning: true
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
