--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,6 +26,6 @@ sphinx:
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+python:
+   install:
+   - requirements: requirements.txt
